fix(template/html&css): fix the bug of white space on webpage by change styles.css and adding js to base.html

--- a/system/static/styles.css
+++ b/system/static/styles.css
@@ -143,3 +143,10 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
+
+.row {
+    display: flex;
+    flex-wrap: nowrap;
+    margin-right: -15px;
+    margin-left: -15px;
+}
